--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -21,12 +21,12 @@
         android:orientation="horizontal"
         android:layout_weight="3">
 
-        <SurfaceView
+        <pl.knowakowski.tetris.GameSurfaceView
             android:id="@+id/surfaceView_gamePanel"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#ABABAB"
             android:layout_margin="20dp"
+            android:background="@drawable/grid"
             android:layout_weight="5"/>
 
         <LinearLayout
