--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,57 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#444">
-
-    <TextView
-        android:id="@+id/textView_appName"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:textSize="25sp"
-        android:layout_weight="11"
-        android:text="@string/app_name" />
+    android:layout_height="match_parent">
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_weight="3">
+        android:background="#444">
 
-        <pl.knowakowski.tetris.GameSurfaceView
-            android:id="@+id/surfaceView_gamePanel"
+        <TextView
+            android:id="@+id/textView_appName"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="20dp"
-            android:background="@drawable/grid"
-            android:layout_weight="5"/>
+            android:gravity="center"
+            android:textSize="25sp"
+            android:layout_weight="11"
+            android:text="@string/app_name" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="10">
+            android:orientation="horizontal"
+            android:layout_weight="3">
 
-            <TextView
-                android:id="@+id/textView_nextItem"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textSize="20sp"
-                android:text="Next Item:" />
-
-            <SurfaceView
-                android:id="@+id/surfaceView_nextItem"
+            <pl.knowakowski.tetris.GameSurfaceView
+                android:id="@+id/surfaceView_gamePanel"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#FABAFA"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:layout_weight="10"/>
+                android:layout_margin="20dp"
+                android:background="@drawable/grid"
+                android:layout_weight="5"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -60,61 +40,92 @@
                 android:layout_weight="10">
 
                 <TextView
-                    android:id="@+id/textView_scoreText"
+                    android:id="@+id/textView_nextItem"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="25sp"
-                    android:text="Score:" />
-                <TextView
-                    android:id="@+id/textView_scorePoints"
+                    android:layout_marginTop="20dp"
+                    android:textSize="20sp"
+                    android:text="Next Item:" />
+
+                <SurfaceView
+                    android:id="@+id/surfaceView_nextItem"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="25sp"
-                    android:text="69" />
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_weight="10"
+                    android:background="#FABAFA" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_weight="10">
+
+                    <TextView
+                        android:id="@+id/textView_scoreText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="25sp"
+                        android:text="Score:" />
+                    <TextView
+                        android:id="@+id/textView_scorePoints"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="25sp"
+                        android:text="69" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:paddingTop="20dp"
+            android:gravity="center"
+            android:layout_weight="10">
+
+            <Button
+                android:id="@+id/button_left"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button_right"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button_down"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button_rotate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:text="Button" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
-    <LinearLayout
+    <SurfaceView
+        android:id="@+id/surfaceView_aboveGameSurfaceView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:paddingTop="20dp"
-        android:gravity="center"
-        android:layout_weight="10">
+        android:background="#00000000"/>
 
-        <Button
-            android:id="@+id/button_left"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="10"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button_right"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="10"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button_down"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="10"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button_rotate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="10"
-            android:text="Button" />
-
-    </LinearLayout>
-
-
-</LinearLayout>
+</FrameLayout>
