--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <SurfaceView
+        android:id="@+id/surfaceView_aboveGameSurfaceView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#00000000"/>
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -47,7 +53,7 @@
                     android:textSize="20sp"
                     android:text="Next Item:" />
 
-                <SurfaceView
+                <pl.knowakowski.tetris.NextFigureSurfaceView
                     android:id="@+id/surfaceView_nextItem"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -55,7 +61,7 @@
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="20dp"
                     android:layout_weight="10"
-                    android:background="#FABAFA" />
+                    android:background="@drawable/small_grid" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -121,11 +127,5 @@
         </LinearLayout>
 
     </LinearLayout>
-
-    <SurfaceView
-        android:id="@+id/surfaceView_aboveGameSurfaceView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#00000000"/>
 
 </FrameLayout>
